--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
+
+/*@font-face {*/
+/*    font-family: 'montserratbold';*/
+/*    src: url('../fonts/montserrat-bold-webfont.woff2') format('woff2'),*/
+/*    url('../fonts/montserrat-bold-webfont.woff') format('woff');*/
+/*    font-weight: normal;*/
+/*    font-style: normal;*/
+
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'montserratregular';*/
+/*    src: url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),*/
+/*    url('../fonts/montserrat-regular-webfont.woff') format('woff');*/
+/*    font-weight: normal;*/
+/*    font-style: normal;*/
+
+/*}*/
+
 * {
     margin: 0;
     padding: 0;
@@ -15,12 +35,11 @@ img {
 
 body {
     color: #000;
-    font-size: 16px;
-    line-height: 1.5;
+    font: 400 14px/24px 'Roboto Slab', "Times New Roman", Times, serif;
 }
 
 a {
-    text-decoration: underline;
+    text-decoration: none;
     color: #000;
 }
 
@@ -37,7 +56,40 @@ table {
 }
 
 .container {
-    max-width: 1230px;
+    max-width: 1170px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.main_banner {
+    min-height: 100vh;
+    background: url("../images/main-banner.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 34px 0;
+}
+
+.logo {
+    font: 700 24px/36px 'Montserrat', Arial, Tahoma, sans-serif;
+    color: #fff;
+}
+
+.navigation a {
+    color: #fff;
+    font: 400 14px/24px 'Montserrat', Arial, Tahoma, sans-serif;
+    padding: 5px 13px;
+    transition: .3s;
+}
+
+.navigation a:hover {
+    text-decoration: underline;
+}
+
+.navigation a:last-child {
+    padding-right: 0;
 }
