--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,10 @@ a {
     color: #000;
 }
 
-h2 {
+.title-20 {
     font: 600 20px 'Montserrat', Arial, Tahoma, sans-serif;
     text-transform: uppercase;
+    text-align: center;
 }
 
 h3 {
@@ -181,9 +182,10 @@ table {
     align-items: center;
 }
 
-#shape {
+.shape {
     width: 50px;
-    margin: 25px 0;
+    margin: 25px auto;
+    display: block;
 }
 
 .advantage {
@@ -274,6 +276,7 @@ table {
 
 .about-img-wrapper img {
     display: block;
+    margin: 0 auto;
 }
 
 .about-img-wrapper ul {
@@ -332,6 +335,108 @@ table {
 
 .about-position {
     padding-top: 5px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+
+.col-33 {
+    width: 33.3%;
+    min-width: 33.3%;
+    padding: 15px;
+}
+
+.col-inner {
+    position: relative;
+}
+
+.col-inner:hover .work-description {
+    opacity: 1;
+    z-index: 2;
+}
+
+.work-description {
+    position: absolute;
+    background-color: rgba(192, 48, 28, .7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    z-index: -1;
+    transition: .3s;
+}
+
+.work-description h5 {
+    font: 400 18px/24px Montserrat, Arial, Tahoma, sans-serif;
+}
+
+.work-category {
+    font-size: 12px;
+    line-height: 24px;
+    margin: 0 0 20px;
+}
+
+.work-button {
+    font-size: 14px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: #c0301c;
+    display: inline-block;
+    background: #fff;
+    padding: 5px 25px;
+}
+
+.tabs-items {
+    padding-top: 45px;
+}
+
+.tabs-item .col-inner img {
+    display: block;
+}
+
+
+#works {
+    padding: 97px 0;
+}
+
+#works .shape {
+    margin-bottom: 15px;
+}
+
+.tabs-nav {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.tabs-nav li {
+    padding: 0;
+    list-style: none;
+}
+.tabs-nav a {
+    display: block;
+    padding: 10px 14px;
+    font-size: 16px;
+    line-height: 24px;
+    text-decoration: none;
+    text-align: center;
+    color: #555;
+}
+
+.tabs-nav a.active {
+    color: #c0301c;
 }
 
 @media  (max-width: 812px) {
